--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.427.0",
     "nanoid": "^5.0.7",
     "next": "14.2.5",
@@ -45,6 +46,7 @@
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
